--- a/index.html
+++ b/index.html
@@ -527,7 +527,7 @@ nav a:hover {
 (() =>
 
   {
-    let url = '/assets/images/back1.jpg';
+    let url = 'back.jpg';
     let img = new Image();
     
     img.onload = function()
