--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 <style>
 
 body {
+    margin: 0;
     font-family: 'Roboto Condensed', sans-serif;
     font-weight: 400;
     font-size: 18px;
@@ -41,7 +42,7 @@ body {
   background-size: cover;
 }
 
-wrapper {
+.wrapper {
     min-height: 100%;
     display: grid;
     grid-template-rows: auto 1fr auto;
@@ -56,27 +57,16 @@ wrapper {
 }
 
 header {
-  background: #212121;
+  
 }
     
-main {
-  text-align: center;
-}
-
 
 footer {
-    background:#2A363E;
-    color:#eee;
-    font-size:30px;
-    padding:50px 0;
+    
 }
 
 .inquire {
-    text-align: center;
-    position: absolute;
-    width: 100%;
-    bottom: 20px;
-    left: 0
+
 }
 
 
