--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@ footer {
     <main>
         <img class="logo" src="zykko.png" width="400" height="160" />
     </main>
-    <footer">[ <a href="http://" class="inquire">CONTACT US</a> ]</footer>
+    <footer>[ <a href="http://" class="inquire">CONTACT US</a> ]</footer>
     
 </div>
 
