--- a/index.html
+++ b/index.html
@@ -65,7 +65,18 @@ footer {
     text-decoration: none;
 }
 
-
+.modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgb(30 138 233 / 59%);
+  z-index: 100;
+  overflow: hidden;
+  opacity: 0;
+  transition: opacity .5s ease
+}
 
 </style>
 
