--- a/index.html
+++ b/index.html
@@ -65,6 +65,9 @@ footer {
     text-decoration: none;
 }
 
+.inquire:hover {
+    font-weight: bold;
+}	
 .modal {
   position: fixed;
   top: 0;
@@ -132,13 +135,13 @@ footer {
 
 <script>
 const img = new Image();
-img.src = "/images/m.png";
+img.src = "m.png";
 
 document.querySelector('a.inquire').addEventListener('click', (e) => {
     e.preventDefault();
     let modal = document.createElement('div');
     modal.className = 'modal';
-    modal.innerHTML = '<div class="contact-form"><div>Contact us at:<br><img src="/images/m.png"></div></div>';
+    modal.innerHTML = '<div class="contact-form"><div>Contact us at:<br><img src="m.png"></div></div>';
     document.body.appendChild(modal);
  
     modal.addEventListener('click', (e) => {
