--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@ body {
 
 header,
 footer {
-            background-color: transparent;
-            color: #fff;
-            padding: 20px;
-        }
+     background-color: transparent;
+     color: #fff;
+     padding: 20px;
+}
 
 
         
@@ -57,10 +57,11 @@ footer {
 
 footer {
    text-align: center;
+   font-size: 40px;
 }
 	
 .inquire {
-    font-size: 24px;
+    font-size: 32px;
     color: #fff;
     text-decoration: none;
 }
@@ -90,7 +91,7 @@ footer {
     <main>
         <img class="logo" src="zykko.png" width="400" height="160" />
     </main>
-    <footer>[ <a href="http://" class="inquire">CONTACT US</a> ]</footer>
+    <footer>[ <a href="http://" class="inquire">[ CONTACT US ]</a> ]</footer>
     
 </div>
 
