--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@ footer {
     <main>
         <img class="logo" src="zykko.png" width="400" height="160" />
     </main>
-    <footer><a href="http://" class="inquire">[ CONTACT US ]</a></footer>
+	<footer><a href="http://" class="inquire"><span style="font-size: 40px;">[</span> CONTACT US <span style="font-size: 40px;">]</span></a></footer>
     
 </div>
 
