--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@ footer {
   z-index: 100;
   overflow: hidden;
   opacity: 0;
-  transition: opacity .5s ease
+  transition: opacity .7s ease
 }
 
 </style>
@@ -146,12 +146,17 @@ document.querySelector('a.inquire').addEventListener('click', (e) => {
     document.body.appendChild(modal);
  
     modal.addEventListener('click', (e) => {
-	if (modal == e.target) modal.remove();
+	   if (modal == e.target) modalRemove();
     });
     document.addEventListener("keydown", (e) => {
-    	if (e.key === "Escape") modal.remove();
+    	if (e.key === "Escape") modalRemove();
     });
-    setTimeout(() => { modal.style.opacity = 1 }, 1);
+    setTimeout(() => { modal.style.opacity = 1; }, 0);
+    
+    modalRemove = () => {
+        modal.ontransitionend = () => { modal.remove(); }
+        setTimeout(() => { modal.style.opacity = 0; }, 0);
+    }
 })
 </script>
     
