--- a/index.html
+++ b/index.html
@@ -144,14 +144,14 @@ const modalCreate = () => {
     	const modal = document.getElementById('modal');
     	modal.ontransitionend = () => { modal.remove(); }
         setTimeout(() => { modal.style.opacity = 0; }, 0);
-	document.removeEventListener("keydown", remove);
+	document.removeEventListener("keydown", remove, true);
     }
     modal.addEventListener('click', (e) => {
 	if (modal == e.target) modalRemove();
     });
     document.addEventListener("keydown", function remove(e) {
     	if (e.key === "Escape") modalRemove();
-    });
+    }, true);
     
 }	
 
