--- a/index.html
+++ b/index.html
@@ -1,14 +1,11 @@
-<!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
+<!doctype html>
+<html lang="en">
 <head>
 <title>zykko.com | Premium Domains</title>
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-<meta name="Author" content="zykko.com" />
-<meta name="Keywords" content="premium domains" />
-<meta name="Description" content="ZYKKO.COM | Premium Domains" />
+<meta charset=utf-8" />
+<meta name="description" content="ZYKKO.COM | Premium Domains" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<script>if (window.top!==window.self) window.top.location=window.self.location;</script>
-<link rel="shortcut icon" type="image/x-icon" href="/favicon.ico" />
+<link rel="icon" href="/favicon.ico" sizes="any">
 <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@300;400&display=swap" rel="stylesheet">
 
