--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <title>zykko.com | Premium Domains</title>
-<meta charset=utf-8" />
+<meta charset="utf-8" />
 <meta name="description" content="ZYKKO.COM | Premium Domains" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <link rel="icon" href="/favicon.ico" sizes="any">
