--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!doctype html>
 <html lang="en">
 <head>
-<title>For Sale</title>
+<title>zykko.com</title>
 <meta charset="utf-8" />
-<meta name="description" content="This domain is for sale." />
+<meta name="description" content="zykko.com - Premium Domains" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <link rel="icon" href="/favicon.ico" sizes="any">
     
