--- a/test.html
+++ b/test.html
@@ -143,7 +143,7 @@ button#inquire:active {
 
             formData.append("email", "Groucho");
             formData.append("text", "123456 nnnn"); 
-            formData.append("q", "qqq"); 
+            //formData.append("q", "qqq"); 
 
             const request = new XMLHttpRequest();
             request.open("POST", "https://ofzo2v.deta.dev/send-me-a-small-nice-message/");
