--- a/domain.html
+++ b/domain.html
@@ -354,7 +354,7 @@ button#inquire:active {
     
     sha256(name).then(res => {
         if (arr.indexOf(res) == -1) {
-            window.location.replace('https://zykko.com/404.html');
+            window.location.replace('https://zykko.com/404.html?ref=' + document.URL);
             return;
         }
         console.log('name = ', name);
