--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ footer {
 }
 	
 button#inquire {
-      display: inline-block;
+      display: none; /* inline-block; */
       font-size: 28px;
       background: #ff9800;
       border: 1px solid #ff9800;
@@ -153,8 +153,8 @@ button#inquire:active {
     img1.src = "back.jpg";
     img1.onload = () => { document.body.style.backgroundImage = 'url("back.jpg")'; }
 
-    const img2 = new Image();
-    img2.src = "m.png";
+    // const img2 = new Image();
+    // img2.src = "m.png";
 
 const modalCreate = () => {
         let modal = document.createElement('div');
