--- a/domain.html
+++ b/domain.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
 <head>
-<title>For Sale</title>
+<title>loading...</title>
 <meta charset="utf-8" />
 <meta name="description" content="This domain is for sale." />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
