--- a/domain.html
+++ b/domain.html
@@ -31,7 +31,11 @@ body {
     height: 100%;
     min-height: 100vh;
 }
-
+	
+img {
+    max-width: 100%;
+}
+	
 #wrapper {
     min-height: 100%;
     display: grid;
