--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ footer {
 }
 	
 button#inquire {
-      display: none; /* inline-block; */
+      display: inline-block; 
       font-size: 28px;
       background: #ff9800;
       border: 1px solid #ff9800;
@@ -64,7 +64,7 @@ button#inquire {
       color: #000;
       cursor: pointer;
       outline: 0;
-      padding: 8px 12px;
+      padding: 9px 16px;
       text-align: center;
       text-rendering: geometricprecision;
       text-transform: none;
@@ -113,7 +113,7 @@ button#inquire:active {
 	text-align: center;
 	font-size: 24px;
 	border-radius: 10px;
-	padding: 100px 0;
+	padding: 120px 0;
 	background: #111;
 	color: #fff;
 	z-index: 1000;
