--- a/index.html
+++ b/index.html
@@ -171,8 +171,8 @@ button#inquire:active {
     img1.src = "back.jpg";
     img1.onload = () => { document.body.style.backgroundImage = 'url("back.jpg")'; }
 
-    // const img2 = new Image();
-    // img2.src = "m.png";
+    const img2 = new Image();
+    img2.src = "m.png";
 
 const modalCreate = () => {
         let modal = document.createElement('div');
