--- a/index.html
+++ b/index.html
@@ -136,24 +136,6 @@ button#inquire:active {
 </style>
 </head>
 <body>
-<script type="text/javascript">
-    var _paq = _paq || [];
-    _paq.push(["trackPageView"]);
-    _paq.push(["enableLinkTracking"]);
-    (function() {
-        var u = "https://zykko.piwik.pro/";
-        _paq.push(["setTrackerUrl", u + "ppms.php"]);
-        _paq.push(["setSiteId", "8bd24783-36b6-4b47-acce-4bd6b63a817a"]);
-        var d = document,
-            g = d.createElement("script"),
-            s = d.getElementsByTagName("script")[0];
-        g.type = "text/javascript";
-        g.async = true;
-        g.defer = true;
-        g.src = u + "ppms.js";
-        s.parentNode.insertBefore(g, s);
-    })();
-</script>
 <div id="wrapper">
     
     <header></header>
@@ -210,7 +192,11 @@ const modalCreate = () => {
 }
 )();
 </script>
-    
+
+<!-- Cloudflare Web Analytics -->
+<script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "de02bdae76174c05aaa3eabad8d27aed"}'></script>
+<!-- End Cloudflare Web Analytics -->
+	
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-NY4Y9E80RT"></script>
 <script>
